# r4p

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
backend/: .env  Cargo.toml  configuration.yaml  sqlx-data.json
backend/migrations/: 20230701120708_create_status_and_r4p__tables.sql  20230701121716_create_recipients_tables.sql  20230701122846_create_offers_tables.sql  20230702194444_create_account_tables.sql  20230711205522_roles_reference_values.sql
backend/scripts/: drop_tests_databases.psql  init_db.sh  migrate.sh  populate_references_data.sql
backend/src/: configuration.rs  datalayer.rs  domain.rs  lib.rs  main.rs  routes.rs  startup.rs
backend/src/domain/: email.rs  entity.rs  names.rs
backend/src/routes/account/: post.rs
backend/tests/: health_check.rs
backend/tests/api/: account.rs  health_check.rs  helpers.rs  main.rs  utils.rs
ui/: Cargo.toml
ui/src/: main.rs
